--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,43 @@
-.App {
-  text-align: center;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body {
+  max-width: 500px;
+  margin: auto;
+  background-color: #ddebdd;
+  font-family: 'Oxygen', sans-serif;
+  color: #3b3a37;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.h1 {
+  margin: 10px 0px 10px 0px;
+  padding: 10px;
+  background-color: #ddebdd;
+  color: #000000;
+  border: 3px solid #000000;
+  /* box-shadow: 3px 6px #132A13; */
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.navbar {
+  margin: 10px 0px 10px 0px;
+  padding: 10px;
+  text-align: right;
+  color: #720363d3;
+  border: 3px solid #720363d3;
 }
 
-.App-link {
-  color: #61dafb;
+.article-list {
+  margin: 10px 0px 10px 0px;
+  padding: 10px;
+  color: #ee6e19;
+  border: 3px solid #ee6e19;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+/* palette notes
+#132A13
+#070f07
+#F2E8CF
+*/
