--- a/src/App.css
+++ b/src/App.css
@@ -1,39 +1,73 @@
 * {
-  margin: 0;
+  margin: 1%;
   padding: 0;
   box-sizing: border-box;
 }
 
 body {
-  max-width: 500px;
-  margin: auto;
   background-color: #ddebdd;
-  font-family: 'Oxygen', sans-serif;
+  font-family: "Oxygen", sans-serif;
   color: #3b3a37;
 }
 
 .h1 {
+  min-width: 500px;
   margin: 10px 0px 10px 0px;
   padding: 10px;
   background-color: #ddebdd;
-  color: #000000;
-  border: 3px solid #000000;
+  color: #022b02;
+  /* border: 3px solid #000000; */
   /* box-shadow: 3px 6px #132A13; */
 }
 
 .navbar {
+  min-width: 500px;
   margin: 10px 0px 10px 0px;
-  padding: 10px;
+  /* padding: 10px; */
   text-align: right;
-  color: #720363d3;
-  border: 3px solid #720363d3;
+  color: #022b02;
+  /* border: 3px solid #720363d3; */
+}
+
+.article-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  /* background-color: #cbeecb; */
+  border: 0.5px solid #022b028c;
+  box-shadow: 3px 3px #022b028c;
 }
 
 .article-list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-items: center;
+  gap: 30px;
+  min-width: 500px;
+  /* width: 80%; */
+  padding: 10px;
+  color: #022b02;
+  background-color: #ddebdd;
+  /* border: 3px solid #ee6e19; */
+}
+
+.article-head {
   margin: 10px 0px 10px 0px;
   padding: 10px;
-  color: #ee6e19;
-  border: 3px solid #ee6e19;
+  color: #022b02;
+}
+
+.article-card {
+  height: 150px;
+  width: 400px;
+  padding: 10px;
+  color: #022b02;
+  background-color: #f4f5f4;
+  border: 1px solid #ddebdd;
+  box-shadow: 3px 3px #022b028c;
+  list-style: none;
 }
 
 /* palette notes
