comments now showing on article page

--- a/src/App.css
+++ b/src/App.css
@@ -152,9 +152,20 @@ a {
 }
 
 .an-article-head {
-  margin: 10px 0px 10px 0px;
-  padding: 10px;
+  margin: 10px 0px 0px 0px;
+  padding: 10px 10px 0px 10px;
   color: #022b02;
+}
+
+.article-topic {
+  margin-top: 0px;
+  margin-left: 0px;
+  padding-left: 10px;
+}
+
+.article-body {
+  
+  border: 1px solid black;
 }
 
 /* VOTES/ONIONS */
@@ -178,6 +189,40 @@ a {
 
 .onion-button:hover {
   background-color: #fefffe;
+}
+
+/* COMMENTS */
+
+.comments {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: #ddebdd;
+
+  /* border: 0.5px solid #022b028c; */
+  box-shadow: 3px 3px #022b028c;
+}
+
+.comments-list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-items: center;
+  gap: 30px;
+  padding: 10px;
+  color: #022b02;
+  background-color: #ddebdd;
+}
+
+.comment-card {
+  width: 50%;
+  padding: 10px;
+  color: #022b02;
+  background-color: #f4f5f4;
+  border: 1px solid #ddebdd;
+  box-shadow: 3px 3px #022b028c;
+  list-style: none;
 }
 
 /* PHONES  */
