--- a/src/App.css
+++ b/src/App.css
@@ -20,7 +20,6 @@ a {
 
 .site-header {
   font-size: xx-large;
-  min-width: 500px;
   margin: 10px 0px 10px 0px;
   padding: 10px;
   background-color: #ddebdd;
@@ -112,6 +111,8 @@ a {
   color: #022b02;
 }
 
+/* ARTICLE CARDS */
+
 .article-card {
   height: 150px;
   width: 400px;
@@ -122,27 +123,6 @@ a {
   box-shadow: 3px 3px #022b028c;
   list-style: none;
 }
-
-.query-container {
-  width: 100%;
-  /* border: 2px solid black; */
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  /* justify-content: center; */
-}
-
-.query {
-  margin: 5px 15px;
-
-}
-
-.query-label {
-  font-size: small;
-  font-weight: bold;
-}
-
-/* ARTICLE CARDS */
 
 .card-title a {
   text-decoration: none;
@@ -155,6 +135,22 @@ a {
   text-decoration: none;
   color: #077007;
   font-size: 1.005em;
+}
+
+.query-container {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.query {
+  margin: 5px 15px;
+}
+
+.query-label {
+  font-size: small;
+  font-weight: bold;
 }
 
 /* SINGLE ARTICLE */
@@ -245,11 +241,6 @@ a {
   list-style: none;
 }
 
-.comment-form {
-  display: flex;
-  flex-direction: column;
-}
-
 .comment-input {
   width: 98%;
 }
@@ -282,13 +273,9 @@ a {
   flex-direction: column;
   gap: 30px;
   min-width: 500px;
-  /* width: 80%; */
   padding: 10px;
   color: #022b02;
   font-size: x-large;
-  /* background-color: #f4f5f4;
-  border: 1px solid #ddebdd;
-  box-shadow: 3px 3px #022b028c; */
 }
 
 .user-item {
@@ -314,94 +301,86 @@ a {
 
 /* PHONES  */
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 565px) {
   html {
     margin: 0px 25px;
     width: 250px;
   }
 
-  * {
-    overflow-x: hidden;
-    max-width: 600px;
-  }
-
-  body {
-    font-size: 10px;
-    text-align: center;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-    max-width: 600px;
-  }
-
-  .App {
-    max-width: 600px;
+  .article-container {
+    width: 175%;
+    border: 0;
+    box-shadow: 0px 0px #ddebdd;
   }
 
   .article-card {
-    max-width: 400px;
-    min-width: 200px;
-  }
-
-  .h1 {
-    max-width: 600px;
-    text-align: left;
-    background: transparent;
-    z-index: -1;
-    overflow: hidden;
-  }
-
-  .navbar {
-    max-width: 600px;
-  }
-
-  .nav-item,
-  .nav-link {
-    position: relative;
-  }
-
-  .nav-list {
-    display: block;
-
-    font-size: 4px;
-    max-width: 600px;
-    list-style-type: none;
-    box-shadow: none;
-  }
-
-  .nav-links {
-    gap: 5px;
-    box-shadow: none;
-  }
-
-  .nav-link,
-  li {
-    margin: 0;
-    padding: 1px;
-    border: 0px;
-    box-shadow: none;
-  }
-
-  .nav-link:focus {
-    box-shadow: none;
-  }
-
-  .article-container {
-    max-width: 600px;
+    height: 150px;
+    width: 300px;
   }
 
   .article-list {
-    max-width: 600px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    gap: 30px;
+    min-width: 500px;
+    padding: 10px;
+    color: #022b02;
+    background-color: #ddebdd;
+  }
+
+  .nav-links {
+    flex-direction: column;
+    justify-content: space-between;
+  }
+
+  .nav-item {
+    margin: 10px;
+    list-style-type: none;
+  }
+
+  .user-container {
+    border: 0.5px solid #ddebdd;
+    box-shadow: 3px 3px #ddebdd;
+  }
+
+  .user-list {
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+    min-width: 0px;
+    padding: 10px;
+    color: #022b02;
+    font-size: x-large;
+  }
+
+  .user-item {
+    width: 200px;
+    display: flex;
+    justify-content: flex-start;
+    padding: 10px;
+    color: #022b02;
+    background-color: #ddebdd;
+    border: 1px solid #ddebdd;
+    box-shadow: 3px 3px #ddebdd;
+    list-style: none;
+  }
+
+  .user-button {
+    padding: 10px;
+    font-size: medium;
+    background-color: #f4f5f4;
   }
 
   .an-article {
-    gap: 30px;
-    max-width: 280px;
+    min-width: 0px;
+    font-size: medium;
+  }
+
+  .comment-card {
+    width: 75%;
+    font-size: small;
   }
 }
-/* palette notes
-#132A13
-#070f07
-#F2E8CF
-*/
+
